src/test/ui/generic-associated-types/issue-95305.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/issue-95305.rs:11:26
   |
LL | fn foo(x: &impl Foo<Item<'_> = u32>) {}
   |                          ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/issue-95305.rs:14:41
   |
LL | fn bar(x: &impl for<'a> Foo<Item<'a> = &'_ u32>) {}
   |                                         ^^ `'_` is a reserved lifetime name

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0637`.
